Add some changes

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,12 @@
             <h1>Deploy24</h1>
             <p>Deployment area for projects</p>
         </div>
+
+        <hr />
+
+        <footer>
+            <p>&copy; 2013 Deploy24.com</p>
+        </footer>
     </div>
 
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
