--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,9 @@
 
 <body>
     <div class="container">
-        <div class="jumbotron">
+        <div class="page-header">
             <h1>Deploy24</h1>
-            <p>Deployment area for projects</p>
+            <p class="lead">Deployment area for projects</p>
         </div>
 
         <hr />
