--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
         </footer>
     </div>
 
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
 </body>
 </html>
